<resources>
    <string name="open"> Open Navigation Drawer </string>
    <string name="close"> Close Navigation Drawer </string>
    <string name="app_name">My Application</string>
    <string name="imageView">ImageView</string>
    <string name="Login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EmailTome">Email</string>

</resources>
